Compositing Problems in 2.71 #41067

Closed
opened 2014-07-14 12:01:19 +02:00 by David Brennan · 11 comments

System Information
Operating system and graphics card

Windows 7, 64-bit. No GPU/

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Blender 2.71
WORKED: 2.70

Short description of error

After rendering a frame in 2.71, I have repeatedly had an issue where the resulting render is not shown properly in its default UV Image Editor window. Often times, even when I select the "COMBINED" pass in the window, it will instead show some one of the random Render Layers. Usually, I have "fixed" this problem by just toggling between the various Render Layers in the UV Image Editor, and eventually under "Combined" the combined render will indeed appear.

However, this problem of confusing Render Layers has now reached a critical level. I have a fairly simple animation of some 2D images (just .PNGs) and there are a good number of Render Layers. However, in 2.71, every time I try to render out the animation, all I get are white frames!

When I render out an individual frame, I can work this out as I described at the top: just toggle through the different Render Layers and then eventually the "Combined" version will be correct. But because this is an animation (700 frames), that work-around is not an option.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Attached is a simple .Blend with all the images attached. Just hit CTRL+F12, and you should see that the result is all white images. But if you check the individual Render Layers, you'll see that everything is okay.

The Bug does not occur in 2.70.

CompositingBug.blend

**System Information** Operating system and graphics card Windows 7, 64-bit. No GPU/ **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) Blender 2.71 WORKED: 2.70 **Short description of error** After rendering a frame in 2.71, I have repeatedly had an issue where the resulting render is not shown properly in its default UV Image Editor window. Often times, even when I select the "COMBINED" pass in the window, it will instead show some one of the random Render Layers. Usually, I have "fixed" this problem by just toggling between the various Render Layers in the UV Image Editor, and eventually under "Combined" the combined render will indeed appear. However, this problem of confusing Render Layers has now reached a critical level. I have a fairly simple animation of some 2D images (just .PNGs) and there are a good number of Render Layers. However, in 2.71, every time I try to render out the animation, all I get are white frames! When I render out an individual frame, I can work this out as I described at the top: just toggle through the different Render Layers and then eventually the "Combined" version will be correct. But because this is an animation (700 frames), that work-around is not an option. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Attached is a simple .Blend with all the images attached. Just hit CTRL+F12, and you should see that the result is all white images. But if you check the individual Render Layers, you'll see that everything is okay. The Bug does not occur in 2.70. [CompositingBug.blend](https://archive.blender.org/developer/F97773/CompositingBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @davidbrennan

Added subscriber: @davidbrennan
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Think the problem here is the muted colorramp node. It could be working differently in render and viewer/previews, which is why "the individual render layers" look correct.

Think the problem here is the muted colorramp node. It could be working differently in render and viewer/previews, which is why "the individual render layers" look correct.
Member

Added subscribers: @Jeroen-Bakker, @monique

Added subscribers: @Jeroen-Bakker, @monique
Lukas Tönne self-assigned this 2014-07-14 19:12:01 +02:00
Member

Indeed, this is what happens:

When the node viewer/preview is calculated, the muted node gets removed before the compositor even starts:
https://developer.blender.org/diffusion/B/browse/master/source/blender/nodes/composite/node_composite_tree.c;48eececdba17af7d85fc19480be0e34e38362e66$140

When the actual full-screen composite is calculated (F12) it does not remove muted nodes in advance, but replaces them with proxies internally. These proxies are also removed later, but when there is a conversion (like the value->color conversion of the Color Ramp node) the input will still be converted:
https://developer.blender.org/diffusion/B/browse/master/source/blender/compositor/intern/COM_NodeGraph.cpp;48eececdba17af7d85fc19480be0e34e38362e66$122

Now the question is if muting should also disable any type conversion. Arguably passing data into one socket type and using the output of another could be expected to do a conversion in any case, regardless of whether the node is muted or not (i.e. the main operation disabled). OTOH the previous behavior was to disable the conversion as well, so this can be seen as a regression.

Indeed, this is what happens: When the node viewer/preview is calculated, the muted node gets removed before the compositor even starts: https://developer.blender.org/diffusion/B/browse/master/source/blender/nodes/composite/node_composite_tree.c;48eececdba17af7d85fc19480be0e34e38362e66$140 When the actual full-screen composite is calculated (F12) it does not remove muted nodes in advance, but replaces them with proxies internally. These proxies are also removed later, but when there is a conversion (like the value->color conversion of the Color Ramp node) the input will still be converted: https://developer.blender.org/diffusion/B/browse/master/source/blender/compositor/intern/COM_NodeGraph.cpp;48eececdba17af7d85fc19480be0e34e38362e66$122 Now the question is if muting should also disable any type conversion. Arguably passing data into one socket type and using the output of another could be expected to do a conversion in any case, regardless of whether the node is muted or not (i.e. the main operation disabled). OTOH the previous behavior was to disable the conversion as well, so this can be seen as a regression.
Author

Well, the "regression" sounds best to me.

Most all viewers will expect animated frames to appear as the same as the individual frames. So I think it's best to just have consistency.

Well, the "regression" sounds best to me. Most all viewers will expect animated frames to appear as the same as the individual frames. So I think it's best to just have consistency.

This issue was referenced by 2bdb872cfb

This issue was referenced by 2bdb872cfb90feae214088954d243820e4992c3b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 2bdb872cfb.

Closed by commit 2bdb872cfb.
Author

Great thanks for your work. God bless!

Great thanks for your work. God bless!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41067
No description provided.